--- a/client/src/modules/components/Typeahead/Typeahead.scss
+++ b/client/src/modules/components/Typeahead/Typeahead.scss
@@ -5,7 +5,6 @@
   position: relative;
   .Input {
     width: 100%;
-    padding-left: 20px;
 
     &::placeholder {
       font-style: italic;
